--- a/style.css
+++ b/style.css
@@ -418,7 +418,7 @@ header .navbar ul li a:hover {
     height: auto;
     border-radius: 5%;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6);
-    mix-blend-mode: luminosity;
+    /* mix-blend-mode: luminosity; */
     transition: 0.3s;
     cursor: pointer;
 }
@@ -430,6 +430,8 @@ header .navbar ul li a:hover {
 .about .row .content {
     flex: 1 1 45rem;
     padding: 3rem;
+    margin-top: 10rem;
+    
 }
 
 .about .row .content h3 {
@@ -497,7 +499,11 @@ header .navbar ul li a:hover {
 }
 
 .resumebtn .btn:hover {
-    background: #1a047e;
+    /* background: #1a047e; */
+    /* background:#ee6c4d; */
+    background-color: #e5ecfb;
+    /* opacity: 0.2; */
+    color:#ee6c4d ;
 }
 
 .resumebtn .btn:hover i {
@@ -605,7 +611,7 @@ header .navbar ul li a:hover {
     justify-content: center;
   }
   .work .desc p {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
   .work .desc .btns {
     display: flex;
