--- a/style.css
+++ b/style.css
@@ -756,6 +756,25 @@ header .navbar ul li a:hover {
         width: 100%;
     }
 }
+@media screen and (min-width:601px)and (max-width: 900px){
+  .skills .container {
+    padding: 0;
+    margin: 0;
+}
+
+.skills .container .row {
+    grid-template-columns: repeat(3, 1fr);
+    margin: 1rem;
+    padding: 2rem 0.2rem 2rem 0.2rem;
+    gap: 1rem;
+}
+
+.skills .container {
+    margin-top: 5px;
+    width: 100%;
+}
+
+}
 /* skills media queries ends*/
 /* skills section ends */
 
